# docs/swagger.yaml
@@ -624,6 +624,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.BaseResponse'
+      security:
+      - BearerAuth: []
       summary: Get all users
       tags:
       - User
@@ -684,10 +686,11 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.BaseResponse'
+      security:
+      - BearerAuth: []
       summary: Delete user by ID
       tags:
       - User
-      x-order: 4
     get:
       consumes:
       - application/json
@@ -713,10 +716,11 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.BaseResponse'
+      security:
+      - BearerAuth: []
       summary: Get user by ID
       tags:
       - User
-      x-order: 2
     put:
       consumes:
       - application/json
@@ -748,10 +752,16 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.BaseResponse'
+      security:
+      - BearerAuth: []
       summary: Update user by ID
       tags:
       - User
-      x-order: 3
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
 tags:
 - name: Auth
